assets/css/unminified/compatibility/woocommerce/woocommerce.css
/* ... */
.wc-block-grid .wc-block-grid__products .wc-block-grid__product .wc-block-grid__product-title {
  margin-bottom: .5em;
  padding: 0;
  font-size: 1em;
  line-height: 1.2;
  font-weight: inherit;
}

.wc-block-grid .wc-block-grid__products .wc-block-grid__product .star-rating {
  margin: 0 auto .5em 0;
  backface-visibility: hidden;
}

.wc-block-grid .wc-block-grid__products .wc-block-grid__product .woocommerce-loop-product__link {
  position: relative;
  display: block;
}

.wc-block-grid .wc-block-grid__products .wc-block-grid__product .woocommerce-loop-product__link:hover .ast-shop-product-out-of-stock {
  background-color: white;
}

.wc-block-grid .wc-block-grid__products .wc-block-grid__product.product-category > a:hover .woocommerce-loop-category__title {
  background-color: white;
}

.wc-block-grid .wc-block-grid__products .wc-block-grid__product .woocommerce-loop-category__title {
  bottom: 1.8em;
  font-size: 0.9em;
}

.wc-block-grid .wc-block-grid__products .wc-block-grid__product .woocommerce-loop-category__title .count {
  font-size: .7em;
}

.wc-block-grid .wc-block-grid__products .wc-block-grid__product .price {
  line-height: 1.3;
  margin-bottom: 0;
  font-weight: 700;
  margin-bottom: .5em;
  font-size: .9em;
}

.wc-block-grid .wc-block-grid__products .wc-block-grid__product .price del {
  display: initial;
}

.wc-block-grid .wc-block-grid__products .wc-block-grid__product .wp-block-button__link {
  margin-top: .5em;
  margin-bottom: .5em;
  white-space: normal;
  line-height: 1.3;
  font-size: 100%;
  font-weight: 700;
}

.wc-block-grid .wc-block-grid__products .wc-block-grid__product .wp-block-button__link.added {
  margin-bottom: 0;
  transition: margin 0s;
}

.wc-block-grid .wc-block-grid__products .wc-block-grid__product .woocommerce-loop-category__title {
  text-transform: uppercase;
  font-weight: bold;
  line-height: 1.5;
}

.wc-block-grid .wc-block-grid__products .wc-block-grid__product .woocommerce-loop-category__title .count {
  display: block;
  background: none;
  opacity: .5;
  font-size: .75em;
}

.wc-block-grid .wc-block-grid__products .wc-block-grid__product .wc-block-grid__product-onsale {
  min-width: 3em;
  min-height: 3em;
  line-height: 3em;
  padding: 0;
  font-size: 1em;
  font-weight: normal;
  text-transform: capitalize;
  position: absolute;
  text-align: center;
  border-radius: 100%;
  z-index: 9;
  top: 0;
  right: 15px;
  left: auto;
  margin: -0.5em -0.5em 0 0;
}

/**
 * Product categories - Sub Category CSS.
 */
.widget_product_categories .children {
  padding-left: 20px;
}

/**
 * Firefox browser compatibility for WooCommerce.
 *
 * 1. Product Search widget button misalign issue.
 */
@supports (-moz-appearance: none) {
  .sidebar-main .widget_product_search .search-field {
    width: 60%;
  }
}

.woocommerce-page .widget .widget-title-common, .woocommerce-page .widget > div h3, .woocommerce-page .widget .widget-title {
  font-size: 1.2em;
  font-weight: 500;
  margin-bottom: 1rem;
  color: var(--ast-global-color-3);
}

.woocommerce-page .widget .wc-block-price-slider {
  padding-top: 0.15em;
}

.woocommerce-page .widget .wc-block-price-slider .wc-block-components-price-slider__range-input-progress {
  --range-color: var(--ast-global-color-0);
  top: -1px;
}

@-moz-document url-prefix() {
  .woocommerce-page .widget .wc-block-price-slider .wc-block-components-price-slider__range-input-progress {
    top: 1px;
  }
}

.woocommerce-page .widget .wc-block-price-slider .wc-block-components-price-slider__range-input-wrapper {
  box-shadow: none;
  background-color: #ededed;
}

.woocommerce-page .widget .wc-block-price-slider .wc-block-components-price-slider__range-input-wrapper,
.woocommerce-page .widget .wc-block-price-slider .wc-block-components-price-slider__range-input-progress {
  height: 3px;
}

.woocommerce-page .widget .wc-block-price-slider .wc-block-price-filter__controls {
  border-color: var(--ast-global-color-6);
}

.woocommerce-page .widget .wc-block-price-slider .wc-block-price-filter__range-text {
  line-height: 2.4;
  font-size: 0.8751em;
}

.woocommerce-page .widget .wc-block-price-slider .wc-block-price-filter__range-text .wc-block-components-formatted-money-amount {
  font-weight: 700;
}

.woocommerce-page .widget .wc-block-price-slider .wc-block-components-price-slider__controls {
  justify-content: end;
}

.woocommerce-page .widget .wc-block-price-slider input[type=range] {
  margin: 0;
}

.woocommerce-page .widget .wc-block-price-slider input[type=range]::-webkit-slider-runnable-track {
  height: 3px;
  box-shadow: none;
  background-color: transparent;
}

.woocommerce-page .widget .wc-block-price-slider input[type=range]::-moz-range-track {
  height: 3px;
  box-shadow: none;
  background-color: transparent;
}

.woocommerce-page .widget .wc-block-price-slider input[type=range].wc-block-price-filter__range-input::-webkit-slider-thumb {
  -webkit-appearance: none;
  border: 0;
  width: 15px;
  height: 15px;
}

.woocommerce-page .widget .wc-block-price-slider input[type=range]::-moz-range-thumb {
  height: 15px;
  border: 0;
  width: 15px;
}

.woocommerce-page .widget .wc-block-checkbox-list li input[type='checkbox'] {
  margin: 0 0.5rem 0 0;
  position: relative;
  top: 1px;
}

.woocommerce-page .widget .wc-block-checkbox-list li .wc-filter-element-label-list-count {
  opacity: 1;
}

.woocommerce-page .widget .wc-layered-nav-rating {
  line-height: 1;
}

.woocommerce-page .widget .wc-layered-nav-rating .star-rating {
  margin: 0;
}

